--- a/pdfmake-builder/package.json
+++ b/pdfmake-builder/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.18.86",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
+    "formik": "^2.4.5",
+    "html-to-pdfmake": "^2.5.3",
+    "pdfmake": "^0.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/html-to-pdfmake": "^2.4.4",
     "tailwindcss": "^3.4.1"
   }
 }
