--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/html-to-pdfmake": "^2.4.4",
+    "@types/pdfmake": "^0.2.9",
     "tailwindcss": "^3.4.1"
   }
 }
